--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 id="h1"></h1>
-    <label>username</label>
-    <input id="myText1"><br><br>
-    <label>password</label>
-    <input id="myText2"><br><br>
-    <button id="logInButton">Log In</button>
+    <label id="countLabel">0</label><br>
+    <div id="btnContainer">
+        <button id="decreaseBtn" class="buttons">decrease</button>
+        <button id="resetBtn" class="buttons">reset</button>
+        <button id="increaseBtn" class="buttons">increase</button>
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
