to do: element showEnemyStatus

--- a/OnclickShowSelectedCharacter/index.html
+++ b/OnclickShowSelectedCharacter/index.html
@@ -22,10 +22,15 @@
 
         <button type="submit" id="mySubmit">READY</button>
         <p id="p1Message"></p>
+        
         <div id="showStatus">
             <p id="showPlayerStatus"></p>
             <p id="showEnemyStatus"></p>
         </div>
+    </div>
+
+    <div id="backgroundGif">
+        <img src="src/BackgroundScene.gif" alt="BackgroundScene1.gif" id="bgGif">
     </div>
     <script src="index.js"></script>
 </body>
