Health and energy bars

--- a/ShortJsGame/index.html
+++ b/ShortJsGame/index.html
@@ -23,11 +23,21 @@
         <button type="submit" id="mySubmit">READY</button><br><br>
         <button type="submit" id="returnBtn">BACK</button>
         <p id="p1Message">Select a character.</p>
-        
         <div id="showStatus">
             <p id="showPlayerStatus"></p>
             <p id="showEnemyStatus"></p>
+            <div id="healthBarContainer">
+                <div id="healthBar"></div>
+                <div id="backgroundHealth"></div>
+                <div id="energyBar"></div>
+                <div id="backgroundEnergy"></div>
+                <div id="healthBarEnemy"></div>
+                <div id="backgroundHealthEnemy"></div>
+                <div id="energyBarEnemy"></div>
+                <div id="backgroundEnergyEnemy"></div>
+            </div>
         </div>
+        
     </div>
     <div id="backgroundGif">
         <img src="src/BackgroundScene.gif" alt="src/BackgroundScene1.gif" id="bgGif">
