--- a/ShortJsGame/index.html
+++ b/ShortJsGame/index.html
@@ -28,10 +28,12 @@
             <p id="showEnemyStatus"></p>
             <div id="healthBarContainer">
                 <div id="healthBar"></div>
+                <div id="bleedingHealthBar"></div>
                 <div id="backgroundHealth"></div>
                 <div id="energyBar"></div>
                 <div id="backgroundEnergy"></div>
                 <div id="healthBarEnemy"></div>
+                <div id="bleedingHealthBarEnemy"></div>
                 <div id="backgroundHealthEnemy"></div>
                 <div id="energyBarEnemy"></div>
                 <div id="backgroundEnergyEnemy"></div>
