To do media queries and resolutions and dimensions

--- a/ShortJsGame/index.html
+++ b/ShortJsGame/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>FullStack V1</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -39,7 +39,6 @@
                 <div id="backgroundEnergyEnemy"></div>
             </div>
         </div>
-        
     </div>
     <div id="backgroundGif">
         <img src="src/BackgroundScene.gif" alt="src/BackgroundScene1.gif" id="bgGif">
