--- a/ShortJsGame/index.html
+++ b/ShortJsGame/index.html
@@ -38,10 +38,11 @@
                 <div id="energyBarEnemy"></div>
                 <div id="backgroundEnergyEnemy"></div>
             </div>
+            <img src="src/C1.png" id="C1img">
         </div>
     </div>
     <div id="backgroundGif">
-        <img src="src/BackgroundScene.gif" alt="src/BackgroundScene1.gif" id="bgGif">
+        <img src="src/BackgroundScene.gif" id="bgGif">
     </div>
     <script src="index.js"></script>
 </body>
