--- a/ShortJsGame/index.html
+++ b/ShortJsGame/index.html
@@ -39,6 +39,7 @@
                 <div id="backgroundEnergyEnemy"></div>
             </div>
             <img src="src/C1.png" id="C1img">
+            <img src="src/C11.png" id="C11img">
         </div>
     </div>
     <div id="backgroundGif">
