--- a/ShortJsGame/index.html
+++ b/ShortJsGame/index.html
@@ -40,6 +40,7 @@
             </div>
             <img src="src/C1.png" id="C1img">
             <img src="src/C11.png" id="C11img">
+            <div id="characterAttacks">Attacks △</div>
         </div>
     </div>
     <div id="backgroundGif">
