to do boolean arrow effects functions

--- a/ShortJsGame/index.html
+++ b/ShortJsGame/index.html
@@ -40,7 +40,13 @@
             </div>
             <img src="src/C1.png" id="C1img">
             <img src="src/C11.png" id="C11img">
-            <div id="characterAttacks">Attacks △</div>
+            <div id="characterAttacks">Attacks</div>
+            <p id="upSideArrow">▲</p>
+            <p id="upSideArrowEffect">⮞</p>
+            <p id="upSideArrowEffect1">⮞</p>
+            <p id="upSideDownArrow">▼</p>
+            <p id="upSideDownArrowEffect">⮞</p>
+            <p id="upSideDownArrowEffect1">⮞</p>
         </div>
     </div>
     <div id="backgroundGif">
