To do: more characters images and div for attackListContainer

--- a/ShortJsGame/index.html
+++ b/ShortJsGame/index.html
@@ -47,6 +47,7 @@
             <p id="upSideDownArrow">▼</p>
             <p id="upSideDownArrowEffect">⮞</p>
             <p id="upSideDownArrowEffect1">⮞</p>
+            <div id="attackListContainer"></div>
         </div>
     </div>
     <div id="backgroundGif">
