--- a/ShortJsGame/index.html
+++ b/ShortJsGame/index.html
@@ -18,14 +18,14 @@
         <label class="labelCharacter" for="character3">Kafka</label><br>
 
         <input type="radio" id="character4" name="characterList" class="inputRadio">
-        <label class="labelCharacter" for="character4">Seele</label><br><br>
+        <label class="labelCharacter" for="character4" >Seele</label><br><br>
 
-        <button type="submit" id="mySubmit">READY</button><br><br>
-        <button type="submit" id="returnBtn">BACK</button>
-        <p id="p1Message">Select a character.</p>
+        <button type="submit" id="mySubmit" class="no-select">READY</button><br><br>
+        <button type="submit" id="returnBtn" class="no-select">BACK</button>
+        <p id="p1Message" class="no-select">Select a character.</p>
         <div id="showStatus">
-            <p id="showPlayerStatus"></p>
-            <p id="showEnemyStatus"></p>
+            <p id="showPlayerStatus" class="no-select"></p>
+            <p id="showEnemyStatus" class="no-select"></p>
             <div id="healthBarContainer">
                 <div id="healthBar"></div>
                 <div id="bleedingHealthBar"></div>
@@ -38,16 +38,22 @@
                 <div id="energyBarEnemy"></div>
                 <div id="backgroundEnergyEnemy"></div>
             </div>
-            <img src="src/C1.png" id="C1img">
-            <img src="src/C11.png" id="C11img">
-            <div id="characterAttacks">Attacks</div>
+            <img src="src/C1.png" id="C1img" class="no-select">
+            <img src="src/C11.png" id="C11img" class="no-select">
+            <img src="src/C2.jpg" id="C2img" class="no-select">
+            <img src="src/C21.png" id="C21img" class="no-select">
+            <div id="characterAttacks" class="no-select">Attacks</div>
             <p id="upSideArrow">▲</p>
             <p id="upSideArrowEffect">⮞</p>
             <p id="upSideArrowEffect1">⮞</p>
             <p id="upSideDownArrow">▼</p>
             <p id="upSideDownArrowEffect">⮞</p>
             <p id="upSideDownArrowEffect1">⮞</p>
-            <div id="attackListContainer"></div>
+            <div id="attackListContainer">
+                <button id="button1Atk"></button>
+                <button id="button2Atk"></button>
+                <button id="button3Atk"></button>
+            </div>
         </div>
     </div>
     <div id="backgroundGif">
