to do responsivity dimensions, transitions, etc...

--- a/ShortJsGame/index.html
+++ b/ShortJsGame/index.html
@@ -50,9 +50,9 @@
             <p id="upSideDownArrowEffect">⮞</p>
             <p id="upSideDownArrowEffect1">⮞</p>
             <div id="attackListContainer">
-                <button id="button1Atk"></button>
-                <button id="button2Atk"></button>
-                <button id="button3Atk"></button>
+                <button id="button1Atk" class="atkButtons"></button>
+                <button id="button2Atk" class="atkButtons"></button>
+                <button id="button3Atk" class="atkButtons"></button>
             </div>
         </div>
     </div>
