To do unique characters responsivity;

--- a/ShortJsGame/index.html
+++ b/ShortJsGame/index.html
@@ -42,6 +42,7 @@
             <img src="src/C11.png" id="C11img" class="no-select">
             <img src="src/C2.jpg" id="C2img" class="no-select">
             <img src="src/C21.png" id="C21img" class="no-select">
+            <img src="src/C3.png" id="C3img" class="no-select">
             <div id="characterAttacks" class="no-select">Attacks</div>
             <p id="upSideArrow">▲</p>
             <p id="upSideArrowEffect">⮞</p>
