To do enemy.css & media queries & best practices

--- a/ShortJsGame/FrontEnd/index.html
+++ b/ShortJsGame/FrontEnd/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FullStack V1</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="enemy.css">
 </head>
 <body>
     <div id="pickCharacter">
@@ -44,6 +45,7 @@
             <img src="src/C21.png" id="C21img" class="no-select">
             <img src="src/C3.png" id="C3img" class="no-select">
             <div id="characterAttacks" class="no-select">Attacks</div>
+            <div id="enemyContainer" class="no-select">Details</div>
             <p id="upSideArrow">▲</p>
             <p id="upSideArrowEffect">⮞</p>
             <p id="upSideArrowEffect1">⮞</p>
