commit regarding gap between elements ; if it works, dont touch it.

--- a/ShortJsGame/FrontEnd/index.html
+++ b/ShortJsGame/FrontEnd/index.html
@@ -52,10 +52,19 @@
             <p id="upSideDownArrow">▼</p>
             <p id="upSideDownArrowEffect">⮞</p>
             <p id="upSideDownArrowEffect1">⮞</p>
+            <p id="upSideArrowEnemy">▲</p>
+            <p id="upSideArrowEffectEnemy">⮞</p>
+            <p id="upSideArrowEffect1Enemy">⮞</p>
+            <p id="upSideDownArrowEnemy">▼</p>
+            <p id="upSideDownArrowEffectEnemy">⮞</p>
+            <p id="upSideDownArrowEffect1Enemy">⮞</p>
             <div id="attackListContainer">
                 <button id="button1Atk" class="atkButtons"></button>
                 <button id="button2Atk" class="atkButtons"></button>
                 <button id="button3Atk" class="atkButtons"></button>
+            </div>
+            <div id="enemyInfo">
+
             </div>
         </div>
     </div>
