if it works, dont touch it. v0.1

--- a/ShortJsGame/FrontEnd/index.html
+++ b/ShortJsGame/FrontEnd/index.html
@@ -64,7 +64,9 @@
                 <button id="button3Atk" class="atkButtons"></button>
             </div>
             <div id="enemyInfo">
+                <li id="enemyInfoList">
 
+                </li>
             </div>
         </div>
     </div>
