to do media queries, add reviewed styles to previous media queries

--- a/ShortJsGame/FrontEnd/index.html
+++ b/ShortJsGame/FrontEnd/index.html
@@ -64,9 +64,9 @@
                 <button id="button3Atk" class="atkButtons"></button>
             </div>
             <div id="enemyInfo">
-                <li id="enemyInfoList">
-
-                </li>
+                <p class="enemyData" id="atkDataEnemy">atk:</p>
+                <p class="enemyData" id="defDataEnemy">def:</p>
+                <p class="enemyData" id="spdDataEnemy">vel:</p>
             </div>
         </div>
     </div>
