--- a/ShortJsGame/FrontEnd/index.html
+++ b/ShortJsGame/FrontEnd/index.html
@@ -63,7 +63,7 @@
                 <button id="button2Atk" class="atkButtons"></button>
                 <button id="button3Atk" class="atkButtons"></button>
             </div>
-            <div id="enemyInfo">
+            <div id="enemyInfo" class="no-select">
                 <p class="enemyData" id="atkDataEnemy">atk:</p>
                 <p class="enemyData" id="defDataEnemy">def:</p>
                 <p class="enemyData" id="spdDataEnemy">vel:</p>
