--- a/Canvas/Project_1/index.html
+++ b/Canvas/Project_1/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="style.css"></link>
 </head>
 <body>
-
+    <canvas id="canvas1"></canvas>
+    
     <script src="index.js"></script>
 </body>
 </html>
